<resources>
    <string name="app_name">Momo Foods</string>
    <string name="main_text">Welcome to MOMO Restaurant</string>
    <string name="main_para">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto ducimus earum eius ex, illo illum in incidunt ipsam iusto</string>
    <string name="main_btn">Get Started</string>
    <string name="main_copy">All rights reserved. By Hasun Bandara</string>
    <string name="signin_text1">Welcome Back</string>
    <string name="signin_text2">We Missed you. let\'s Sign In</string>
    <string name="signin_text3">Lorem ipsum dolor sit amet, consectetur</string>
    <string name="signin_text4">Mobile</string>
    <string name="signin_text5">Password</string>
    <string name="signin_text6">Sign In</string>
    <string name="signin_text7">Register</string>
    <string name="signin_text8">Home</string>
    <string name="signin_text9">Admin</string>

    <string name="userVerification_text1">Check Your Email</string>
    <string name="userVerification_text2">We sent you a verification code to your email. Please Check your Inbox.</string>
    <string name="userVerification_text3">Verify</string>

    <string name="signup_text1">Welcome</string>
    <string name="signup_text2">Let\'s Taste our Food </string>
    <string name="signup_text3">Create a New Account Here</string>
    <string name="signup_text4">Name</string>
    <string name="signup_text5">Email</string>
    <string name="signup_text6">Create New Account</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="navbar_coupon">Coupon</string>
    <string name="navbar_cart">Cart</string>
    <string name="navbar_profile">Profile</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="Homepage_text1">Top Categories</string>
    <string name="Homepage_text2">Popular Now</string>
    <string name="Homepage_text3">View all</string>
    <string name="Homepage_text4">Welcome</string>

    <string name="singleProductView_text1">Details</string>
    <string name="singleProductView_text2">Nutritional Value Per 100g</string>
    <string name="singleProductView_text3">Proteins</string>
    <string name="singleProductView_text4">Fats</string>
    <string name="singleProductView_text5">Carbohydrates</string>
    <string name="singleProductView_text6">Add to Cart</string>

    <string name="cartView_text1">My Cart</string>
    <string name="cartView_text2">Promo Code</string>
    <string name="cartView_text3">Apply</string>
    <string name="cartView_text4">Order Summery</string>
    <string name="cartView_text5">Subtotal</string>
    <string name="cartView_text6">Tax &amp; Fees</string>
    <string name="cartView_text7">Delivery Free</string>
    <string name="cartView_text8">Total</string>
    <string name="cartView_text9">Free</string>
    <string name="cartView_text10">Proceed to Checkout</string>
    <string name="cartView_text11">Your Cart is Empty</string>

    <string name="checkout_text_1">Order Summary</string>
    <string name="checkout_text_2">Delivery Address</string>
    <string name="checkout_text_3">Payment Method</string>
    <string name="checkout_text_4">Place Your Order</string>
    <string name="checkout_text_5">Cash On Delivery</string>
    <string name="checkout_text_6">Credit/Debit Cards</string>
    <string name="checkout_text_7">Dine In</string>

    <string name="invoice_text_1">Your Order</string>
    <string name="invoice_text_2">Home</string>
    <string name="invoice_text_3">Download</string>
    <string name="invoice_text_4">Momo Restaurant Pvt Ltd</string>
    <string name="invoice_text_5">No 11 Wattala Road, Wattala, Gampaha</string>
    <string name="invoice_text_6">+9446798486/+9452156472</string>
    <string name="invoice_text_7">Order</string>
    <string name="invoice_text_8">000000</string>
    <string name="invoice_text_9">Total</string>
    <string name="invoice_text_10">LKR 20000.00</string>
    <string name="invoice_text_11">Delivery Fee</string>
    <string name="invoice_text_12">Sub Total</string>
    <string name="invoice_text_13">Track Your Order</string>

    <string name="history_text_1">Order History</string>
    <string name="history_text_2">Edit Profile</string>

    <string name="profile_text_1">Profile</string>
    <string name="profile_text_2">Update Profile</string>
    <string name="profile_text_3">Log Out</string>
    <string name="profile_text_4">Name</string>
    <string name="profile_text_5">Email</string>
    <string name="profile_text_6">Mobile</string>
    <string name="profile_text_7">Password</string>
    <string name="profile_text_8">Address</string>

    <!-- administration -->

    <string name="admin_text_1">Admin Sign In</string>
    <string name="admin_text_2">Dashboard</string>
    <string name="admin_text_3">Sales</string>
    <string name="admin_text_4">Products</string>
    <string name="admin_text_5">Users</string>
    <string name="admin_text_6">Orders</string>
    <string name="admin_text_7">Order Details</string>
    <string name="admin_text_8">Order No</string>
    <string name="admin_text_9">Add Order</string>
    <string name="admin_text_10">Add Products</string>
    <string name="admin_text_11">Select Products</string>
    <string name="admin_text_12">Product Details</string>
    <string name="admin_text_13">Update Product</string>

</resources>