<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".fragments.profileFragment" >

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/navigationbar"
        android:src="@drawable/_11689_left_arrow_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/profile_text_8"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextText13" />

    <TextView
        android:id="@+id/textView73"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/profile_text_7"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextText14" />

    <TextView
        android:id="@+id/textView74"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/profile_text_6"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextText15" />

    <TextView
        android:id="@+id/textView75"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_marginStart="25dp"
        android:text="@string/profile_text_5"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextText16" />

    <TextView
        android:id="@+id/textView76"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_marginStart="25dp"
        android:text="@string/profile_text_4"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextText17" />

    <TextView
        android:id="@+id/textView72"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_text_1"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
        app:layout_constraintEnd_toStartOf="@+id/imageView16"
        app:layout_constraintStart_toEndOf="@+id/imageButton6"
        app:layout_constraintTop_toTopOf="@+id/imageButton6" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/profile_text_3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/momo_brown"
        android:text="@string/profile_text_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextText13"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="text"
        android:maxLines="2"
        android:text="@string/profile_text_1"
        android:textColor="@color/momo_brown"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextText14" />

    <EditText
        android:id="@+id/editTextText14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/profile_text_1"
        android:textColor="@color/momo_brown"
        app:layout_constraintBottom_toTopOf="@+id/editTextText13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextText15" />

    <EditText
        android:id="@+id/editTextText15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/profile_text_1"
        android:textColor="@color/material_dynamic_neutral40"
        app:layout_constraintBottom_toTopOf="@+id/editTextText14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView74" />

    <EditText
        android:id="@+id/editTextText16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/profile_text_1"
        android:textColor="@color/material_dynamic_neutral40"
        app:layout_constraintBottom_toTopOf="@+id/editTextText15"
        app:layout_constraintEnd_toEndOf="@+id/editTextText15"
        app:layout_constraintStart_toStartOf="@+id/editTextText15" />

    <EditText
        android:id="@+id/editTextText17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/profile_text_1"
        android:textColor="@color/momo_brown"
        app:layout_constraintBottom_toTopOf="@+id/editTextText16"
        app:layout_constraintEnd_toEndOf="@+id/editTextText16"
        app:layout_constraintStart_toStartOf="@+id/editTextText16" />

</androidx.constraintlayout.widget.ConstraintLayout>